--- a/css/style.css
+++ b/css/style.css
@@ -565,7 +565,7 @@ a {
 }
 
 .map {
-	margin-bottom: -127px;
+	display: flex;
 }
 
 /* Подвал */
@@ -574,6 +574,7 @@ a {
 	display: flex;
 	position: relative;
 	line-height: 26px;
+	margin-top: -120px;
 }
 
 .page-footer.index {
