--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 
 .site-wrapper {
 	width: 1200px;
+	z-index: 5;
 	margin: 0 auto;
 	background-color: #ffffff;
 	box-shadow: 0px 0px 15px 0 rgba(0, 1, 1, 0.2);
@@ -337,12 +338,17 @@ a {
 
 .hotel-search {
 	position: relative;
-	z-index: 10;
+	z-index: 5;
 	min-height: 291px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
+}
+
+.hotel-form-text-block {
+	z-index: 10;
+	background-color: white;
 }
 
 .hotel-search-b {
@@ -368,7 +374,6 @@ a {
 	width: 568px;
 	min-height: 86px;
 	margin-top: 32px;
-	z-index: 5;
 	background-color: #766357;
 	font-size: 21px;
 	font-weight: bold;
@@ -392,6 +397,7 @@ a {
 
 .hotel-form {
 	position: absolute;
+	z-index: 1;
 	top: 100%;
 	left: calc(50% - 568px / 2);
 	display: flex;
@@ -414,10 +420,10 @@ a {
 }
 @keyframes form-slide {
 	0% {
-		top: -30%;
+		transform: translateY(-100%);
 	}
 	100% {
-		top: 100%;
+		transform: translateY(0);
 	}
 }
 
@@ -589,10 +595,12 @@ a {
 .map {
 	display: flex;
 	position: relative;
+	z-index: 2;
 }
 
 .map iframe {
 	position: absolute;
+	z-index: 2;
 }
 
 /* Подвал */
