--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
 
 .site-wrapper {
 	width: 1200px;
-	z-index: 5;
 	margin: 0 auto;
 	background-color: #ffffff;
 	box-shadow: 0px 0px 15px 0 rgba(0, 1, 1, 0.2);
@@ -347,14 +346,18 @@ a {
 }
 
 .hotel-form-text-block {
-	z-index: 10;
-	background-color: white;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	z-index: 1;
+	width: 100%;
+	background-color: #ffffff;
 }
 
 .hotel-search-b {
 	font-size: 30px;
 	line-height: 36px;
-	margin-top: 50px;
+	padding-top: 50px;
 }
 
 .hotel-search-p {
@@ -397,34 +400,26 @@ a {
 
 .hotel-form {
 	position: absolute;
-	z-index: 1;
 	top: 100%;
 	left: calc(50% - 568px / 2);
 	display: flex;
 	flex-direction: column;
 	width: 568px;
 	min-height: 395px;
-	background-color: white;
+	background-color: #ffffff;
 	box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15); 
 	font-weight: bold;
 	line-height: 26px;
+	transition: transform 0.5s;
 }
 
 .hotel-form.hidden {
+	transform: translateY(-100%);
 	display: none;
 }
 
 .hotel-form.show {
-	animation-name: form-slide;
-	animation-duration: 1s;
-}
-@keyframes form-slide {
-	0% {
-		transform: translateY(-100%);
-	}
-	100% {
-		transform: translateY(0);
-	}
+	transform: translateY(0);
 }
 
 .hotel-form .form-input {
@@ -595,12 +590,10 @@ a {
 .map {
 	display: flex;
 	position: relative;
-	z-index: 2;
 }
 
 .map iframe {
 	position: absolute;
-	z-index: 2;
 }
 
 /* Подвал */
