--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,8 @@ a {
 	min-height: 1314px;
 	display: flex;
 	flex-direction: column;
+	position: relative;
+	z-index: 2;
 }
 
 .features .features-intro {
@@ -337,7 +339,7 @@ a {
 
 .hotel-search {
 	position: relative;
-	z-index: 5;
+	z-index: 1;
 	min-height: 291px;
 	display: flex;
 	flex-direction: column;
@@ -402,24 +404,24 @@ a {
 	position: absolute;
 	top: 100%;
 	left: calc(50% - 568px / 2);
+	
 	display: flex;
 	flex-direction: column;
 	width: 568px;
 	min-height: 395px;
+	
 	background-color: #ffffff;
 	box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15); 
 	font-weight: bold;
 	line-height: 26px;
-	transition: transform 0.5s;
+	
+	transition: all 0.5s;
+	transform: translateY(0);
 }
 
 .hotel-form.hidden {
 	transform: translateY(-100%);
-	display: none;
-}
-
-.hotel-form.show {
-	transform: translateY(0);
+	visibility: hidden;
 }
 
 .hotel-form .form-input {
